--- a/config.yml
+++ b/config.yml
@@ -3,7 +3,7 @@ params:
     L_d: 60
     staff_velocity: 0.58
     drone_velocity: 0.83
-    num_staff: 2
+    num_staff: 3
     num_drone: 2
 
 data_path: data/old/10.10.1.txt
@@ -11,9 +11,11 @@ data_path: data/old/10.10.1.txt
 result_folder: result
 
 solver:
-    solver: GUROBI
+    solver: CPLEX #GUROBI
     solver_log: false
     num_worker: -1
     time_limit: 180
     model_params:
         gurobi: {}
+        cplex: {}
+
