--- a/.gitignore
+++ b/.gitignore
@@ -263,3 +263,6 @@ pip-selfcheck.json
 .DS_Store
 
 # End of https://www.toptal.com/developers/gitignore/api/python,pycharm+all,git,virtualenv
+
+result
+result/*
