--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-run_type: ts
+run_type: test
 
 params:
   L_w: 60
@@ -23,5 +23,5 @@ solver:
 
 test:
   data_path: data/old/12.20.4.txt
-  staff: [ [ 0,5,13 ],[ 0,2,13 ],[ 0,10,13 ] ]
-  drone: [ [ [ 0,11,7,13 ] ],[ [ 0,8,6,12,3,13 ] ],[ [ 0,9,1,4,13 ] ] ]
+  staff: [ [ 5 ],[ 2 ],[ 10 ] ]
+  drone: [ [ [ 11,7 ] ],[ [ 8,6,12,3 ] ],[ [ 9,1,4 ] ] ]
