--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-run_type: ts
+run_type: cal
 
 params:
   L_w: 60
@@ -14,7 +14,7 @@ result_folder: result
 
 tabu_params:
   tabu_size: 5
-  max_iter: 100
+  max_iter: 200
   alpha1: 1
   alpha2: 1
   beta: 0.5
@@ -30,5 +30,5 @@ solver:
 
 test:
   data_path: data/old/12.20.4.txt
-  staff: [ [ 5 ],[ 2 ],[ 10 ] ]
-  drone: [ [ [ 11,7 ] ],[ [ 8,6,12,3 ] ],[ [ 9,1,4 ] ] ]
+  staff: [[2, 10, 5, 7, 11]]
+  drone: [[[9], [12, 6, 1, 4, 8, 3]]]
