--- a/config.yml
+++ b/config.yml
@@ -5,10 +5,10 @@ params:
   L_d: 120
   staff_velocity: 0.58
   drone_velocity: 0.83
-  num_staff: 1
-  num_drone: 1
+  num_staff: 2
+  num_drone: 2
 
-data_path: data/old/6*.txt
+data_path: data/old/12.20.4.txt
 
 result_folder: result
 
@@ -22,7 +22,7 @@ tabu_params:
   use_weights: True
   action_weights: {"move10": 0.2, "move11": 0.2,
                        "move20": 0.15, "move21": 0.2,
-                       "move2opt": 0.2, "move01": 0.05}
+                       "move2opt": 0.15, "move01": 0.05, "move02": 0.05}
 
 ejection:
   max_level: 2
