--- a/config.yml
+++ b/config.yml
@@ -1,15 +1,16 @@
 #run_type: cal
-run_type: tabu_12_1_1
+#run_type: result
+run_type: gurobi_12_2_2
 
 params:
   L_w: 60
   L_d: 120
   staff_velocity: 0.58
   drone_velocity: 0.83
-  num_staff: 1
-  num_drone: 1
+  num_staff: 2
+  num_drone: 2
 
-data_path: data/old/12.5.3.txt
+data_path: data/old/12.20.2.txt
 
 result_folder: result
 
@@ -41,3 +42,6 @@ test:
   data_path: data/old/12.5.3.txt
   staff: [ [4, 9, 6, 7, 3] ]
   drone: [ [[11, 1, 10, 12, 8, 5, 2]] ]
+
+result:
+  path: result/tabu_12_2_2/05192022083328/*
