--- a/config.yml
+++ b/config.yml
@@ -14,7 +14,8 @@ params:
   use_inter: False
   use_intra: False
 
-data_path: data/old/100.20.1.txt
+data_path: [data/old/100.*.1.txt]
+except_path: []
 
 result_folder: result
 
@@ -44,9 +45,10 @@ solver:
     cplex: { }
 
 test:
-  data_path: data/old/100.40.1.txt
-  staff: [ [45, 80, 25, 17, 28, 3, 16, 59, 99, 39, 29]]
-  drone: [[[48, 36, 49, 15, 82, 30, 50, 10, 26, 31, 81, 4, 64], [56, 37, 69, 84, 21, 87, 68, 63, 13, 86, 65, 88], [12, 96, 98, 60, 90, 77, 79, 74, 14, 100], [46, 91, 93, 47, 7, 76, 22, 75, 95, 53, 71], [97, 57, 23, 5, 34, 94, 24, 51, 35, 41, 52], [54, 32, 27, 40, 42, 44, 73, 2], [19, 61, 11, 70, 72, 62, 55], [67, 43, 8, 6, 58, 38, 78, 85, 1, 18, 92, 33, 20, 89, 9, 83, 66]]]
+  data_path: data/old/100.20.1.txt
+  staff: [[6, 16, 17, 61, 31, 85, 27, 75, 11, 33, 23, 45, 81, 58, 30, 64], [20, 26, 9, 46, 66, 87, 97, 96, 38, 71, 92, 90, 76, 13]]
+  drone: [[[24, 69, 52, 43, 79, 60, 67, 100, 50, 80, 57, 59, 91, 70, 8, 94, 22, 51, 93, 2, 4], [95, 99, 32, 28, 55, 7, 49, 39, 86, 42, 74, 41, 77], [73]], [[84, 40, 72, 63, 48, 36, 29, 65, 56, 25, 82, 62, 37, 34, 83, 44, 68, 89, 12, 35, 3, 10, 53, 19, 14, 98, 54], [1, 78, 21, 88, 18, 47, 15, 5]]]
+
 
 result:
   path: result/gurobi_12_1_1/05182022222138/*.json
