--- a/config.yml
+++ b/config.yml
@@ -8,13 +8,13 @@ params:
   L_d: 120
   staff_velocity: 0.58
   drone_velocity: 0.83
-  num_staff: 2 # tinh tong khoang cach tu depot toi tung khach hang, roi chia cho van toc, chia tiep cho thoi gian cho
-  num_drone: 2 # toi da chi su dung 3 drone
+  num_staff: 1 # tinh tong khoang cach tu depot toi tung khach hang, roi chia cho van toc, chia tiep cho thoi gian cho
+  num_drone: 1 # toi da chi su dung 3 drone
   use_ejection: True
   use_inter: True
   use_intra: True
 
-data_path: [data/old/6.5.1.txt]
+data_path: [data/old/6.5.*.txt]
 except_path: []
 
 result_folder: result
