--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,7 @@
 #run_type: cal
 #run_type: result
-run_type: tabu_6_1_1
+run_type: lcs_6_1_1
+#run_type: tabu_6_1_1
 #run_type: test
 
 params:
@@ -14,10 +15,15 @@ params:
   use_inter: True
   use_intra: True
 
-data_path: [data/old/6.5.*.txt]
+data_path: [data/old/6.5.1.txt]
 except_path: []
 
 result_folder: result
+
+local_search_params:
+  max_iter: 500
+  max_stable: 10 #20
+  num_runs: 1
 
 tabu_params:
   tabu_size: 5
