--- a/config.yml
+++ b/config.yml
@@ -15,7 +15,7 @@ params:
   use_inter: True
   use_intra: True
 
-data_path: [data/old/6.*.txt, data/old/10.*.txt, data/old/12.*.txt]
+data_path: [data/old/6.*.txt, data/old/10.*.txt, data/old/12.*.txt, data/old/20.*.txt]
 except_path: []
 
 result_folder: result
