--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,7 @@
 #run_type: cal
 #run_type: result
-run_type: lcs
+run_type: hybrid
+#run_type: lcs
 #run_type: tabu_6_1_1
 #run_type: test
 
@@ -15,7 +16,7 @@ params:
   use_inter: True
   use_intra: True
 
-data_path: [data/old/6.*.txt, data/old/10.*.txt, data/old/12.*.txt, data/old/20.*.txt]
+data_path: [data/old/12.5.3.txt]
 except_path: []
 
 result_folder: result
@@ -23,12 +24,12 @@ result_folder: result
 local_search_params:
   max_iter: 500
   max_stable: 10 #20
-  num_runs: 5
+  num_runs: 1
 
 tabu_params:
   tabu_size: 5
   max_iter: 500
-  num_runs: 10
+  num_runs: 1
   terminate_iter: 200
   alpha1: 1
   alpha2: 1
