--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,7 @@
 #run_type: cal
 #run_type: result
-#run_type: hybrid
-run_type: lcs
+run_type: hybrid
+#run_type: lcs
 #run_type: tabu_12_1_1
 #run_type: test
 
@@ -16,7 +16,7 @@ params:
   use_inter: True
   use_intra: True
 
-data_path: [data/old/12.*.txt, data/old/10.*.txt, data/old/20.*.txt]
+data_path: [data/old/6.*.txt]
 except_path: []
 
 result_folder: result
