--- a/config.yml
+++ b/config.yml
@@ -1,8 +1,8 @@
 #run_type: cal
 #run_type: result
-run_type: hybrid
+#run_type: hybrid
 #run_type: lcs
-#run_type: tabu_12_1_1
+run_type: tabu_12_1_1
 #run_type: test
 
 params:
@@ -12,11 +12,11 @@ params:
   drone_velocity: 0.83
   num_staff: 1 # tinh tong khoang cach tu depot toi tung khach hang, roi chia cho van toc, chia tiep cho thoi gian cho
   num_drone: 1 # toi da chi su dung 3 drone
-  use_ejection: True
-  use_inter: True
-  use_intra: True
+  use_ejection: False
+  use_inter: False
+  use_intra: False
 
-data_path: [data/old/6.*.txt]
+data_path: [data/old/12.5.3.txt]
 except_path: []
 
 result_folder: result
