--- a/config.yml
+++ b/config.yml
@@ -16,7 +16,7 @@ params:
   use_inter: True
   use_intra: True
 
-data_path: [data/old/50.*.txt, data/old/100.*.txt]
+data_path: [data/old/50.*.txt]
 except_path: []
 
 result_folder: result
